test/units/ParseSpec/invalid/decl/duplicate-constructor-1.algst
data SnocList = Snoc SnocList Int | Nil
data ConsList = Cons ConsList Int | Nil
